salesforce/force-app/main/default/objects/Product2/fields/Is_Dermatologist_Tested__c.field-meta.xml
<CustomField>
    <fullName>Is_Dermatologist_Tested__c</fullName>
    <label>Dermatologist Tested</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>