salesforce/force-app/main/default/objects/Product2/fields/Is_Hypoallergenic__c.field-meta.xml
<CustomField>
    <fullName>Is_Hypoallergenic__c</fullName>
    <label>Hypoallergenic</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>