salesforce/force-app/main/default/objects/Product2/fields/Is_Paraben_Free__c.field-meta.xml
<CustomField>
    <fullName>Is_Paraben_Free__c</fullName>
    <label>Paraben Free</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>