salesforce/force-app/main/default/objects/Product2/fields/Is_Vegan__c.field-meta.xml
<CustomField>
    <fullName>Is_Vegan__c</fullName>
    <label>Vegan</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>