salesforce/force-app/main/default/objects/Product2/fields/Key_Ingredients__c.field-meta.xml
<CustomField>
    <fullName>Key_Ingredients__c</fullName>
    <label>Key Ingredients</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>