salesforce/force-app/main/default/objects/Product2/fields/Price_Tier__c.field-meta.xml
<CustomField>
    <fullName>Price_Tier__c</fullName>
    <label>Price Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Value</fullName><default>false</default><label>Value</label></value>
            <value><fullName>Mid-Range</fullName><default>false</default><label>Mid-Range</label></value>
            <value><fullName>Premium</fullName><default>false</default><label>Premium</label></value>
            <value><fullName>Luxury</fullName><default>false</default><label>Luxury</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>