salesforce/force-app/main/default/objects/Product2/fields/Store_Stock_Level__c.field-meta.xml
<CustomField>
    <fullName>Store_Stock_Level__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Store Stock Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>